--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,115 +1,106 @@
-
-.wrapper{
-    padding: 0 20px 0 20px;
+.wrapper {
+    padding: 0 20px;
     background-image: url("../../assets/img/landingpic4.jpg");
     background-blend-mode: multiply;
-    background-size: cover ;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-.main{
+
+.main {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
 
-/* Your existing CSS */
-#forgotPassword {
-    color: #3c2382;  
-    font-size: small;
+.row {
+    display: flex;
+    width: 100%;
+    max-width: 1200px; /* Prevents the content from stretching too wide */
+    margin: 0 auto;
+    justify-content: space-between;
 }
 
-#forgotPassword:hover {
-    text-decoration: none;
-    color: rgba(12, 47, 85, 0.937);
-}
-/* Your existing CSS */
-.box{
-    position: relative;
-    padding: 20px 0;
+.side-image {
     display: flex;
-    
+    flex-direction: column;
+    gap: 20px; /* Space between each box */
 }
-.icon{
+
+.box {
+    position: relative;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px; /* Space between icon and text */
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.icon {
     min-width: 60px;
-    height: 100px;
+    height: 60px; /* Adjusted for better icon size */
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.75em;
-    cursor: pointer;
+    font-size: 2em; /* Larger icon size */
+    color: #ffffff; /* White icon color */
 }
-.icon:hover{
-    color: grey;
+
+.icon:hover {
+    color: #ececec;
     transition: 0.5s ease-in;
 }
-.text{
+
+.text {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
     font-size: 1.1em;
     color: white;
     font-weight: 300;
+    text-align: left; /* Align text to the left */
 }
-.text h3{
+
+.text h3 {
     font-weight: 500;
+    margin-bottom: 5px;
 }
-.side-image{
-    gap: 100px;
+
+.text p {
+    margin: 0;
+}
+
+/* Right section (form) */
+.right {
     display: flex;
-    min-height: 500px;
-    padding: 20px;
-    gap: 100px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
-.row{
-  width:  1000px;
-  max-width: 1000px;
-  max-height: 550px;
-  height:550px;
-  border-radius: 10px;
-  background: rgba(0,0,0,0.2);
-  padding: 0px;
-  box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
-  margin-top: 70px;
+
+.input-box {
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
 }
-.text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.text p{
-    color: #fff;
-    font-size: 20px; 
-}
-i{
-    font-weight: 400;
-    font-size: 15px;
-}
-.right{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-.input-box{
-  width: 330px;
-  box-sizing: border-box;
-}
-.input-box header{
+
+.input-box header {
     font-weight: 700;
     text-align: center;
     margin-bottom: 45px;
+    color: aliceblue;
 }
-.input-field{
+
+.input-field {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 0 10px 0 10px;
+    padding: 0 10px;
 }
 
-.input{
+.input {
     height: 45px;
     width: 100%;
     background: transparent;
@@ -119,69 +110,78 @@ i{
     margin-bottom: 20px;
     color: #40414a;
 }
-.input-box .input-field label{
+
+.input-box .input-field label {
     position: absolute;
     top: 10px;
     left: 10px;
     pointer-events: none;
-    transition: .5s;
+    transition: 0.5s;
 }
-.input-field input:focus ~ label
-   {
+
+.input-field input:focus~label,
+.input-field input:valid~label {
     top: -10px;
     font-size: 13px;
-  }
-  .input-field input:valid ~ label
-  {
-   top: -10px;
-   font-size: 13px;
-   color: #5d5076;
- }
- .input-field .input:focus, .input-field .input:valid{
+    color: #5d5076;
+}
+
+.input-field .input:focus,
+.input-field .input:valid {
     border-bottom: 1px solid #743ae1;
- }
- .submit{
+}
+
+.submit {
     border: none;
     outline: none;
     height: 45px;
     background: #ececec;
     border-radius: 5px;
-    transition: .4s;
- }
- .submit:hover{
+    transition: 0.4s;
+}
+
+.submit:hover {
     background: rgba(37, 95, 156, 0.937);
     color: #fff;
- }
-.signup{
+}
+
+/* Styling for sign-up link */
+.signup {
     text-align: center;
     font-size: small;
     margin-top: 25px;
 }
-span a{
+
+span a {
     text-decoration: none;
     font-weight: 700;
     color: #000;
-    transition: .5s;
+    transition: 0.5s;
 }
-span a:hover{
+
+span a:hover {
     text-decoration: underline;
     color: #000;
 }
 
-@media only screen and (max-width: 768px){
-    .side-image{
+@media only screen and (max-width: 768px) {
+    .side-image {
         border-radius: 10px 10px 0 0;
     }
-    .text{
+
+    .text {
         position: absolute;
         top: 70%;
         text-align: center;
     }
-    .text p, i{
+
+    .text p,
+    i {
         font-size: 16px;
     }
-    .row{
-        max-width:420px;
+
+    .row {
+        max-width: 420px;
         width: 100%;
     }
 }
