--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,1 +1,79 @@
-<p>mainpage works!</p>
+<section class="hero-section">
+  <app-navbar></app-navbar>
+  <div style="margin-top: 120px;">
+    <div class="container d-flex align-items-center justify-content-center text-white flex-column col-9">
+      <mat-toolbar class="filter1" style="display: flex; justify-content: space-between; height: 100px;">
+        <span class="col-3">
+          <div class="content">
+            <mat-form-field [style.width]="'90%'">
+              <mat-label>Species</mat-label>
+              <mat-select [formControl]="filterForm.controls.species">
+                <mat-option value="Dog">Dog</mat-option>
+                <mat-option value="Cat">Cat</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </span>
+        <span class="col-3">
+          <div class="content">
+            <!-- Dropdown for location (list of cities in Morocco) -->
+            <mat-form-field [style.width]="'90%'">
+              <mat-label>Location</mat-label>
+              <mat-select [formControl]="filterForm.controls.location">
+                <mat-option value="Casablanca">Casablanca</mat-option>
+                <mat-option value="Rabat">Rabat</mat-option>
+                <mat-option value="Marrakech">Marrakech</mat-option>
+                <mat-option value="Fes">Fes</mat-option>
+                <mat-option value="Tangier">Tangier</mat-option>
+                <mat-option value="Agadir">Agadir</mat-option>
+                <mat-option value="Meknes">Meknes</mat-option>
+                <mat-option value="Essaouira">Essaouira</mat-option>
+                <mat-option value="Tetouan">Tetouan</mat-option>
+                <mat-option value="Oujda">Oujda</mat-option>
+                <mat-option value="Kenitra">Kenitra</mat-option>
+                <mat-option value="Safi">Safi</mat-option>
+                <mat-option value="Ksar El Kebir">Ksar El Kebir</mat-option>
+                <mat-option value="El Jadida">El Jadida</mat-option>
+                <mat-option value="Nador">Nador</mat-option>
+                <mat-option value="Beni Mellal">Beni Mellal</mat-option>
+                <mat-option value="Laayoune">Laayoune</mat-option>
+                <mat-option value="Dakhla">Dakhla</mat-option>
+                <!-- Add more cities if necessary -->
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </span>
+        <span class="col-3" style="display: flex; justify-content: space-evenly;">
+          <mat-form-field [style.width]="'90%'">
+            <mat-label>Sex</mat-label>
+            <mat-select [formControl]="filterForm.controls.sex">
+              <mat-option value="male">Male</mat-option>
+              <mat-option value="female">Female</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </span>
+        <span class="col-3" style="display: flex; justify-content: space-evenly;">
+          <button mat-stroked-button color="primary" [style.width]="'40%'">Reset</button>
+          <button mat-flat-button color="primary" [style.width]="'40%'" (click)="filter()">Search</button>
+        </span>
+      </mat-toolbar>
+    </div>
+    <br />
+    <div class="container" style="display: flex; justify-content: space-between;">
+      <div class="product-content">
+        <!-- Cards will be rendered here dynamically -->
+        <div class="product-card" *ngFor="let animal of filteredAnimals">
+          <img [src]="'data:image/png;base64,' + animal.picture" alt="{{ animal.picture }}" />
+          <h3>{{ animal.name }}</h3>
+          <div class="product-info">
+            <h4 class="age">{{ animal.age }} years</h4>
+            <h4 class="sex">{{ animal.sex }}</h4>
+            <h4 class="location">{{ animal.location }}</h4>
+            <p class="description">{{ animal.description }}</p>
+            <button class="Adopt" (click)="adoptAnimal(animal)">Adopt</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
