--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -19,6 +19,16 @@
     text-decoration: none;
     transition: 0.5s background-color;
 }
+.logout-button {
+    background-color: whitesmoke;
+    color: black;
+    font-weight: 500;
+    font-size: 14px;
+    padding: 8px 20px;
+    border-radius: 40px;
+    text-decoration: none;
+    transition: 0.5s background-color;
+}
 
 .login-button:hover {
     background-color: rgb(95, 133, 117);
@@ -31,6 +41,7 @@
     background-color: rgba(8, 143, 143, 0.2);
     box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
 }
+
 .navbar-toggler {
     border: none;
     font-size: 1.25rem;
